# qnap-one-touch-copy-linux

./: README.md  pyproject.toml
onetouchcopy/: main.py  service.py  udisks2_interfaces.py  utils.py
resources/: 10-qnap-usb-description.rules  onetouchcopy.service
src/: main.py  udisks2_interfaces.py  utils.py
