[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qnap-one-touch-copy-linux"
dynamic = ["version"]
description = "Qnap's one-touch-copy implementation for Linux"
readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Christophe Henry", email = "contact@c-henry.fr" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Mass Storage",

]

requires-python = ">= 3.11"

dependencies = [
    "evdev~=1.9.1",
    "sdbus==0.13.0",
]

[project.optional-dependencies]
dev = [
    "uv",
    "pre-commit",
    "ruff",
    "jinja2>=3,<4"
]

[project.urls]
Homepage = "https://github.com/christophehenry/qnap-one-touch-copy-linux"
Repository = "https://github.com/christophehenry/qnap-one-touch-copy-linux"
Issues = "https://github.com/christophehenry/qnap-one-touch-copy-linux/issues"

[project.scripts]
example = "onetouchcopy.main:main"

[tool.setuptools.dynamic]
version = { attr = "onetouchcopy.__version__" }

[tool.setuptools.packages.find]
include = ["onetouchcopy"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]
